@@ -3,6 +3,7 @@
 	* Fix build without c-pages, but with c-fsindex
 	* Add the ability to detect truncated archives
 	* Replace all memory related API to debug-enabled
+	* Optimize block statistics in fsindex
 
 2024-05-25 Konstantin Kushnir <chpock@gmail.com>
 	* Add support for writer in C
